feat: again did not save the notebook before committing

--- a/DS_deepdive_3_solutions.ipynb
+++ b/DS_deepdive_3_solutions.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[51], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mprint\u001b[39m(n_list[\u001b[39m1\u001b[39m][\u001b[39m3\u001b[39m])\n\u001b[1;32m     22\u001b[0m \u001b[39m# Error! Only integer can be used for indexing\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[39mprint\u001b[39m(my_list[\u001b[39m4.0\u001b[39;49m])\n",
+      "Cell \u001b[0;32mIn[36], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mprint\u001b[39m(n_list[\u001b[39m1\u001b[39m][\u001b[39m3\u001b[39m])\n\u001b[1;32m     22\u001b[0m \u001b[39m# Error! Only integer can be used for indexing\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[39mprint\u001b[39m(my_list[\u001b[39m4.0\u001b[39;49m])\n",
       "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not float"
      ]
     }
@@ -4330,18 +4330,54 @@
    "metadata": {},
    "source": [
     "#### Exercise 7: Creating and viewing DataFrames\n",
-    "1. Create a pandas dataframe with 10 rows using a list of lists as input for the dataframe.\n",
-    "2. The next step is to display the 8'th row in a print statement.\n",
-    "3. Finally, display the first 3 rows using a method that we showed earlier."
+    "1. Create a pandas dataframe with 5 rows using a list of lists as input for the dataframe.\n",
+    "2. The next step is to display the third row in a print statement.\n",
+    "3. Finally, display the first 2 rows using the `.head()` method that we showed earlier."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    0   1   2\n",
+      "0   1   2   3\n",
+      "1   4   5   6\n",
+      "2   7   8   9\n",
+      "3  10  11  12\n",
+      "4  13  14  15\n",
+      "\n",
+      "\n",
+      "0    7\n",
+      "1    8\n",
+      "2    9\n",
+      "Name: 2, dtype: int64\n",
+      "\n",
+      "\n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  6\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fill in your solution in this cell"
+    "# Fill in your solution in this cell\n",
+    "\n",
+    "# 1.\n",
+    "df_sol_7 = pd.DataFrame([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12], [13, 14, 15]])\n",
+    "print(df_sol_7)\n",
+    "print('\\n')\n",
+    "\n",
+    "# 2.\n",
+    "print(df_sol_7.iloc[2])\n",
+    "print('\\n')\n",
+    "\n",
+    "# 3.\n",
+    "print(df_sol_7.head(2))"
    ]
   },
   {
@@ -4404,8 +4440,8 @@
    "metadata": {},
    "source": [
     "#### Exercise 8: Combining DataFrames\n",
-    "1. Create two dataframes using dictionaries and numerical values only. Use a different number of rows and columns for each dataframe.\n",
-    "2. Combine the two dataframes using the method we mentioned earlier.\n",
+    "1. Create two dataframes using dictionaries and numerical values only. Use a different number of columns for each dataframe.\n",
+    "2. Combine the two dataframes using the `.concat()` method we mentioned earlier. Don't forget about setting a value of the method to True.\n",
     "3. Do you notice anything when you display the combined dataframe and do you understand what is happening? "
    ]
   },
@@ -4413,9 +4449,58 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   first  second\n",
+      "0      0       4\n",
+      "1      1       5\n",
+      "2      2       6\n",
+      "3      3       7\n",
+      "\n",
+      "\n",
+      "   first  second  third\n",
+      "0      8      12     16\n",
+      "1      9      13     17\n",
+      "2     10      14     18\n",
+      "3     11      15     19\n",
+      "\n",
+      "\n",
+      "   first  second  third\n",
+      "0      0       4    NaN\n",
+      "1      1       5    NaN\n",
+      "2      2       6    NaN\n",
+      "3      3       7    NaN\n",
+      "4      8      12   16.0\n",
+      "5      9      13   17.0\n",
+      "6     10      14   18.0\n",
+      "7     11      15   19.0\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fill in your solution of exercise 8 here."
+    "# Fill in your solution of exercise 8 here.\n",
+    "\n",
+    "# 1.\n",
+    "df_sol_8_1 = pd.DataFrame({'first': [0, 1, 2, 3], 'second': [4, 5, 6, 7]})\n",
+    "df_sol_8_2 = pd.DataFrame({'first': [8, 9, 10, 11], 'second': [12, 13, 14, 15], 'third': [16, 17, 18, 19]})\n",
+    "\n",
+    "print(df_sol_8_1)\n",
+    "print('\\n')\n",
+    "print(df_sol_8_2)\n",
+    "print('\\n')\n",
+    "\n",
+    "#2. \n",
+    "df_sol_8_concat = pd.concat([df_sol_8_1, df_sol_8_2], ignore_index=True)\n",
+    "print(df_sol_8_concat)\n",
+    "print('\\n')\n",
+    "\n",
+    "#3.\n",
+    "# Because there is an additional column in the second dataframe w.r.t. the first dataframe. The combined dataframe has filled in missing values, because the first dataframe does not have a third column"
    ]
   },
   {
@@ -4484,18 +4569,51 @@
    "metadata": {},
    "source": [
     "#### Exercise 9: Cleaning the data\n",
-    "\n",
     "1. Create a single dataframe that has both missing values and duplicate values using only numerical values as data.\n",
-    "2. Clean the abovementioned dataframes by deleting the missing values and duplicate values"
+    "2. Clean the abovementioned dataframes by deleting the missing values and duplicate values."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   first  second  third\n",
+      "0      0       4    NaN\n",
+      "1      1       5    NaN\n",
+      "2      2       6    NaN\n",
+      "3      3       7    NaN\n",
+      "4      0      12   16.0\n",
+      "5      1      13   17.0\n",
+      "6      2      14   18.0\n",
+      "7      3      15   19.0\n",
+      "\n",
+      "\n",
+      "   first  second  third\n",
+      "4      0      12   16.0\n",
+      "5      1      13   17.0\n",
+      "6      2      14   18.0\n",
+      "7      3      15   19.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fill in your solution of exercise 9 here."
+    "# Fill in your solution of exercise 9 here.\n",
+    "\n",
+    "# 1.\n",
+    "df_sol_9_1 = pd.DataFrame({'first': [0, 1, 2, 3], 'second': [4, 5, 6, 7]})\n",
+    "df_sol_9_2 = pd.DataFrame({'first': [0, 1, 2, 3], 'second': [12, 13, 14, 15], 'third': [16, 17, 18, 19]})\n",
+    "df_sol_9_concat = pd.concat([df_sol_9_1, df_sol_9_2], ignore_index=True)\n",
+    "print(df_sol_9_concat)\n",
+    "print('\\n')\n",
+    "\n",
+    "# 2.\n",
+    "df_sol_9_clean = df_sol_9_concat.drop_duplicates().dropna()\n",
+    "print(df_sol_9_clean)"
    ]
   },
   {
@@ -4579,9 +4697,45 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          first     second      third\n",
+      "count  4.000000   4.000000   4.000000\n",
+      "mean   1.500000  13.500000  17.500000\n",
+      "std    1.290994   1.290994   1.290994\n",
+      "min    0.000000  12.000000  16.000000\n",
+      "25%    0.750000  12.750000  16.750000\n",
+      "50%    1.500000  13.500000  17.500000\n",
+      "75%    2.250000  14.250000  18.250000\n",
+      "max    3.000000  15.000000  19.000000\n",
+      "\n",
+      "\n",
+      "          first     second      third\n",
+      "count  8.000000   8.000000   4.000000\n",
+      "mean   1.500000   9.500000  17.500000\n",
+      "std    1.195229   4.440077   1.290994\n",
+      "min    0.000000   4.000000  16.000000\n",
+      "25%    0.750000   5.750000  16.750000\n",
+      "50%    1.500000   9.500000  17.500000\n",
+      "75%    2.250000  13.250000  18.250000\n",
+      "max    3.000000  15.000000  19.000000\n"
+     ]
+    }
+   ],
    "source": [
-    "# Fill in your solution of exercise 10 here."
+    "# Fill in your solution of exercise 10 here.\n",
+    "\n",
+    "#1.\n",
+    "df_sol_9_clean\n",
+    "print(df_sol_9_clean.describe())\n",
+    "print('\\n')\n",
+    "\n",
+    "#2.\n",
+    "print(df_sol_9_concat.describe())\n",
+    "#the statistics account for missing values and duplicate values. Note that since NaN is a missing value it is not incorporated in the min or max, since it is not a value."
    ]
   },
   {
