--- a/DS_deepdive_3.ipynb
+++ b/DS_deepdive_3.ipynb
@@ -5465,7 +5465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.1 (main, Feb 14 2023, 15:58:09) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
