feat: finished first exercises

--- a/DS_deepdive_4.ipynb
+++ b/DS_deepdive_4.ipynb
@@ -1,12 +1,536 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "def add_noise_to_data() -> pd.DataFrame:\n",
+    "    raw_data = pd.read_csv('csv_data/DailyDelhiClimate.csv')\n",
+    "\n",
+    "    #wrong data types\n",
+    "    wrong_data_types = pd.DataFrame(['a', 'b', 'c', 'd', 'e'], index=raw_data.columns).T\n",
+    "\n",
+    "    #wrong data values\n",
+    "    wrong_data_values = pd.DataFrame([9999, -999, -1000, 1000, -550], index=raw_data.columns).T\n",
+    "\n",
+    "    #duplicates\n",
+    "    duplicates = raw_data.iloc[:10, :]\n",
+    "\n",
+    "    #missing values\n",
+    "    missing_values = pd.DataFrame([np.nan, np.nan, np.nan, np.nan, np.nan], index=raw_data.columns).T\n",
+    "\n",
+    "    noisy_data = pd.concat([raw_data, wrong_data_types, wrong_data_values, duplicates, missing_values])\n",
+    "    noisy_data.reset_index(inplace=True, drop=True)\n",
+    "    noisy_data = noisy_data.reindex(np.random.permutation(noisy_data.index))\n",
+    "    noisy_data.reset_index(inplace=True, drop=True)\n",
+    "    noisy_data.to_pickle('csv_data/RawDailyDelhiClimate.pkl')\n",
+    "\n",
+    "add_noise_to_data()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 1.\n",
-    "sdfsdfsdfsf"
+    "# Pandas: Data Preparation\n",
+    "In this section we're going to cover different data pre processing techniques to clean the data for data science purposes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-28</td>\n",
+       "      <td>14.863636</td>\n",
+       "      <td>82.772727</td>\n",
+       "      <td>9.690909</td>\n",
+       "      <td>1019.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-02-01</td>\n",
+       "      <td>15.25</td>\n",
+       "      <td>78.625</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1017.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>18.388889</td>\n",
+       "      <td>74.944444</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1014.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>17.111111</td>\n",
+       "      <td>81.888889</td>\n",
+       "      <td>4.016667</td>\n",
+       "      <td>1018.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-03-18</td>\n",
+       "      <td>24.692308</td>\n",
+       "      <td>46.307692</td>\n",
+       "      <td>7.123077</td>\n",
+       "      <td>1009.846154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>2017-02-11</td>\n",
+       "      <td>15.625</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>1016.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123</th>\n",
+       "      <td>2017-01-10</td>\n",
+       "      <td>12.111111</td>\n",
+       "      <td>71.944444</td>\n",
+       "      <td>9.361111</td>\n",
+       "      <td>1016.888889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>2017-03-07</td>\n",
+       "      <td>22.625</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>6.025</td>\n",
+       "      <td>1007.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>2017-04-13</td>\n",
+       "      <td>29.666667</td>\n",
+       "      <td>29.111111</td>\n",
+       "      <td>4.944444</td>\n",
+       "      <td>1006.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>2017-02-14</td>\n",
+       "      <td>16.875</td>\n",
+       "      <td>65.5</td>\n",
+       "      <td>6.9625</td>\n",
+       "      <td>1021.375</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>127 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date   meantemp   humidity wind_speed meanpressure\n",
+       "0    2017-01-28  14.863636  82.772727   9.690909  1019.636364\n",
+       "1    2017-02-01      15.25     78.625        5.1       1017.5\n",
+       "2    2017-01-05  18.388889  74.944444        3.3  1014.333333\n",
+       "3    2017-01-03  17.111111  81.888889   4.016667  1018.333333\n",
+       "4    2017-03-18  24.692308  46.307692   7.123077  1009.846154\n",
+       "..          ...        ...        ...        ...          ...\n",
+       "122  2017-02-11     15.625       64.0       3.95     1016.625\n",
+       "123  2017-01-10  12.111111  71.944444   9.361111  1016.888889\n",
+       "124  2017-03-07     22.625       41.5      6.025     1007.375\n",
+       "125  2017-04-13  29.666667  29.111111   4.944444  1006.777778\n",
+       "126  2017-02-14     16.875       65.5     6.9625     1021.375\n",
+       "\n",
+       "[127 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Data Ingestion\n",
+    "\n",
+    "raw_data = pd.read_pickle('csv_data/RawDailyDelhiClimate.pkl')\n",
+    "raw_data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 1:\n",
+    "1. What kind of data inconsistencies can you spot?\n",
+    "2. Delete missing values from the data set\n",
+    "3. Delete duplicate values from the data set\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-28</td>\n",
+       "      <td>14.863636</td>\n",
+       "      <td>82.772727</td>\n",
+       "      <td>9.690909</td>\n",
+       "      <td>1019.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-02-01</td>\n",
+       "      <td>15.25</td>\n",
+       "      <td>78.625</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1017.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>18.388889</td>\n",
+       "      <td>74.944444</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1014.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>17.111111</td>\n",
+       "      <td>81.888889</td>\n",
+       "      <td>4.016667</td>\n",
+       "      <td>1018.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-03-18</td>\n",
+       "      <td>24.692308</td>\n",
+       "      <td>46.307692</td>\n",
+       "      <td>7.123077</td>\n",
+       "      <td>1009.846154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>2017-02-07</td>\n",
+       "      <td>15.125</td>\n",
+       "      <td>63.75</td>\n",
+       "      <td>7.6375</td>\n",
+       "      <td>1016.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>2017-02-11</td>\n",
+       "      <td>15.625</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>1016.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>2017-03-07</td>\n",
+       "      <td>22.625</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>6.025</td>\n",
+       "      <td>1007.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>2017-04-13</td>\n",
+       "      <td>29.666667</td>\n",
+       "      <td>29.111111</td>\n",
+       "      <td>4.944444</td>\n",
+       "      <td>1006.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>2017-02-14</td>\n",
+       "      <td>16.875</td>\n",
+       "      <td>65.5</td>\n",
+       "      <td>6.9625</td>\n",
+       "      <td>1021.375</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>116 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date   meantemp   humidity wind_speed meanpressure\n",
+       "0    2017-01-28  14.863636  82.772727   9.690909  1019.636364\n",
+       "1    2017-02-01      15.25     78.625        5.1       1017.5\n",
+       "2    2017-01-05  18.388889  74.944444        3.3  1014.333333\n",
+       "3    2017-01-03  17.111111  81.888889   4.016667  1018.333333\n",
+       "4    2017-03-18  24.692308  46.307692   7.123077  1009.846154\n",
+       "..          ...        ...        ...        ...          ...\n",
+       "121  2017-02-07     15.125      63.75     7.6375     1016.125\n",
+       "122  2017-02-11     15.625       64.0       3.95     1016.625\n",
+       "124  2017-03-07     22.625       41.5      6.025     1007.375\n",
+       "125  2017-04-13  29.666667  29.111111   4.944444  1006.777778\n",
+       "126  2017-02-14     16.875       65.5     6.9625     1021.375\n",
+       "\n",
+       "[116 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Write your solutions for exercise 1 here.\n",
+    "\n",
+    "#1. There are missing values, duplicates, wrong data types, and wrong data values\n",
+    "\n",
+    "#2\n",
+    "clean_data = raw_data.dropna().copy(deep=True)\n",
+    "\n",
+    "#3.\n",
+    "clean_data.drop_duplicates(inplace=True)\n",
+    "clean_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01</td>\n",
+       "      <td>15.913043</td>\n",
+       "      <td>85.869565</td>\n",
+       "      <td>2.743478</td>\n",
+       "      <td>59.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-02</td>\n",
+       "      <td>18.500000</td>\n",
+       "      <td>77.222222</td>\n",
+       "      <td>2.894444</td>\n",
+       "      <td>1018.277778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>17.111111</td>\n",
+       "      <td>81.888889</td>\n",
+       "      <td>4.016667</td>\n",
+       "      <td>1018.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-04</td>\n",
+       "      <td>18.700000</td>\n",
+       "      <td>70.050000</td>\n",
+       "      <td>4.545000</td>\n",
+       "      <td>1015.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>18.388889</td>\n",
+       "      <td>74.944444</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>1014.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>2017-04-20</td>\n",
+       "      <td>34.500000</td>\n",
+       "      <td>27.500000</td>\n",
+       "      <td>5.562500</td>\n",
+       "      <td>998.625000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>2017-04-21</td>\n",
+       "      <td>34.250000</td>\n",
+       "      <td>39.375000</td>\n",
+       "      <td>6.962500</td>\n",
+       "      <td>999.875000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>2017-04-22</td>\n",
+       "      <td>32.900000</td>\n",
+       "      <td>40.900000</td>\n",
+       "      <td>8.890000</td>\n",
+       "      <td>1001.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>2017-04-23</td>\n",
+       "      <td>32.875000</td>\n",
+       "      <td>27.500000</td>\n",
+       "      <td>9.962500</td>\n",
+       "      <td>1002.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>113</th>\n",
+       "      <td>2017-04-24</td>\n",
+       "      <td>32.000000</td>\n",
+       "      <td>27.142857</td>\n",
+       "      <td>12.157143</td>\n",
+       "      <td>1004.142857</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date   meantemp   humidity  wind_speed  meanpressure\n",
+       "0    2017-01-01  15.913043  85.869565    2.743478     59.000000\n",
+       "1    2017-01-02  18.500000  77.222222    2.894444   1018.277778\n",
+       "2    2017-01-03  17.111111  81.888889    4.016667   1018.333333\n",
+       "3    2017-01-04  18.700000  70.050000    4.545000   1015.700000\n",
+       "4    2017-01-05  18.388889  74.944444    3.300000   1014.333333\n",
+       "..          ...        ...        ...         ...           ...\n",
+       "109  2017-04-20  34.500000  27.500000    5.562500    998.625000\n",
+       "110  2017-04-21  34.250000  39.375000    6.962500    999.875000\n",
+       "111  2017-04-22  32.900000  40.900000    8.890000   1001.600000\n",
+       "112  2017-04-23  32.875000  27.500000    9.962500   1002.125000\n",
+       "113  2017-04-24  32.000000  27.142857   12.157143   1004.142857\n",
+       "\n",
+       "[114 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data = pd.read_csv('csv_data/DailyDelhiClimate.csv')\n",
+    "raw_data\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Exercise 1.\n"
    ]
   },
   {
@@ -24,8 +548,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1 (main, Feb 14 2023, 15:58:09) [Clang 14.0.0 (clang-1400.0.29.202)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
