feat: finished second exercise

--- a/DS_deepdive_4.ipynb
+++ b/DS_deepdive_4.ipynb
@@ -203,10 +203,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise 1:\n",
+    "Exercise 1: Basic cleaning\n",
     "1. What kind of data inconsistencies can you spot?\n",
     "2. Delete missing values from the data set\n",
-    "3. Delete duplicate values from the data set\n"
+    "3. Delete duplicate values from the data set"
    ]
   },
   {
@@ -369,6 +369,220 @@
     "#3.\n",
     "clean_data.drop_duplicates(inplace=True)\n",
     "clean_data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 2: Intermediate cleaning\n",
+    "\n",
+    "1. Write a function that includes the cleaning steps from the previous exercise, that takes a data frame as input and returns a cleaner data frame\n",
+    "2. Solve the other data inconsistencies in the data set and include this solution in the function you just wrote\n",
+    "3. Write the data as a csv named 'Clean{YOUR NAME}DailyDelhiClimate'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>meantemp</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>wind_speed</th>\n",
+       "      <th>meanpressure</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-28</td>\n",
+       "      <td>14.863636</td>\n",
+       "      <td>82.772727</td>\n",
+       "      <td>9.690909</td>\n",
+       "      <td>1019.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-02-01</td>\n",
+       "      <td>15.25</td>\n",
+       "      <td>78.625</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1017.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-05</td>\n",
+       "      <td>18.388889</td>\n",
+       "      <td>74.944444</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1014.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-03</td>\n",
+       "      <td>17.111111</td>\n",
+       "      <td>81.888889</td>\n",
+       "      <td>4.016667</td>\n",
+       "      <td>1018.333333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-03-18</td>\n",
+       "      <td>24.692308</td>\n",
+       "      <td>46.307692</td>\n",
+       "      <td>7.123077</td>\n",
+       "      <td>1009.846154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>121</th>\n",
+       "      <td>2017-02-07</td>\n",
+       "      <td>15.125</td>\n",
+       "      <td>63.75</td>\n",
+       "      <td>7.6375</td>\n",
+       "      <td>1016.125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>2017-02-11</td>\n",
+       "      <td>15.625</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>1016.625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>124</th>\n",
+       "      <td>2017-03-07</td>\n",
+       "      <td>22.625</td>\n",
+       "      <td>41.5</td>\n",
+       "      <td>6.025</td>\n",
+       "      <td>1007.375</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>125</th>\n",
+       "      <td>2017-04-13</td>\n",
+       "      <td>29.666667</td>\n",
+       "      <td>29.111111</td>\n",
+       "      <td>4.944444</td>\n",
+       "      <td>1006.777778</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>2017-02-14</td>\n",
+       "      <td>16.875</td>\n",
+       "      <td>65.5</td>\n",
+       "      <td>6.9625</td>\n",
+       "      <td>1021.375</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date   meantemp   humidity wind_speed meanpressure\n",
+       "0    2017-01-28  14.863636  82.772727   9.690909  1019.636364\n",
+       "1    2017-02-01      15.25     78.625        5.1       1017.5\n",
+       "2    2017-01-05  18.388889  74.944444        3.3  1014.333333\n",
+       "3    2017-01-03  17.111111  81.888889   4.016667  1018.333333\n",
+       "4    2017-03-18  24.692308  46.307692   7.123077  1009.846154\n",
+       "..          ...        ...        ...        ...          ...\n",
+       "121  2017-02-07     15.125      63.75     7.6375     1016.125\n",
+       "122  2017-02-11     15.625       64.0       3.95     1016.625\n",
+       "124  2017-03-07     22.625       41.5      6.025     1007.375\n",
+       "125  2017-04-13  29.666667  29.111111   4.944444  1006.777778\n",
+       "126  2017-02-14     16.875       65.5     6.9625     1021.375\n",
+       "\n",
+       "[114 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Write your solutions for exercise 2 here.\n",
+    "\n",
+    "#1. \n",
+    "def clean_data_func_1(raw_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    cleaned_data = raw_df.dropna().copy(deep=True)\n",
+    "    cleaned_data.drop_duplicates(inplace=True)\n",
+    "    return cleaned_data\n",
+    "\n",
+    "#2. \n",
+    "def clean_data_func_2(raw_df: pd.DataFrame) -> pd.DataFrame:\n",
+    "    cleaned_data = raw_df.dropna().copy(deep=True)\n",
+    "    cleaned_data.drop_duplicates(inplace=True)\n",
+    "\n",
+    "    #clean wrong data types\n",
+    "    wrong_data_types = cleaned_data['meantemp'].apply(lambda x: type(x) != str)         #note that if you want to do it thoroughly you have to do this for every column. But the noise data is created as entire rows, so this works\n",
+    "    cleaned_data = cleaned_data.loc[wrong_data_types]\n",
+    "\n",
+    "    #clean wrong data values\n",
+    "    wrong_data_values = cleaned_data['meantemp'] > 0\n",
+    "    cleaned_data = cleaned_data.loc[wrong_data_values]\n",
+    "\n",
+    "    return cleaned_data\n",
+    "\n",
+    "#3.\n",
+    "clean_data = clean_data_func_2(raw_df=raw_data)\n",
+    "clean_data.to_csv('CleanSjenkieDailyDelhiClimate.csv')\n",
+    "clean_data"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 3: Advanced Data quality check\n",
+    "We've prepared a data set that is already clean. Now we use this prepped data set a double check\n",
+    "\n",
+    "1. Read BOTH the prepped data csv file and the cleaned data set csv file that you just created. Do you notice anything different?\n",
+    "2. Create a function that checks if the two data sets are the same or not\n",
+    "3. Create a solution that solves the difference in the first question of this exercise\n",
+    "4. Save the cleaned data set and incorporating the answer of question 3 of this exercise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write your solutions for exercise 2 here."
    ]
   },
   {
